--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/font-awesome/fontawesome.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/font-awesome/brands.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/font-awesome/solid.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 
@@ -101,8 +101,8 @@
                     <div class="mainmenu">
                         <a href="index.html" class="mainmenu__item">Home</a>
                         <a href="#" class="mainmenu__item">Story</a>
-                        <a href="#" class="mainmenu__item">project</a>
-                        <a href="#" class="mainmenu__item">news &amp; events</a>
+                        <a href="./project-filter.html" class="mainmenu__item">Properties</a>
+                        <a href="./news-and-event.html" class="mainmenu__item">news &amp; events</a>
                         <a href="#" class="mainmenu__item">Contact</a>
                     </div>
                     <p class="label label--topleft label--vert-mirror">the important stuff</p>
@@ -288,7 +288,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="./project-details.html">Read More</a>
+                                                    <a class="btn mt-3" href="./project-details.html">See More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -312,7 +312,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="#/">Read More</a>
+                                                    <a class="btn mt-3" href="#/">See More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -336,7 +336,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="./project-details.html">Read More</a>
+                                                    <a class="btn mt-3" href="./project-details.html">See More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -360,7 +360,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="./project-details.html">Read More</a>
+                                                    <a class="btn mt-3" href="./project-details.html">See More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -387,11 +387,10 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <h2>Why Work With Us</h2>
-                        <h4 class="my-3">Awesome with Extra Ordinary Flexibility Features</h4>
                         <h6 class="font-weight-light subtitle">You can relay on our amazing features list and also our customer services will be great experience for you without doubt and in no-time</h6>
                         <div class="row">
                             <div class="col-md-6 mt-3">
-                                <h6 class="font-weight-medium">Instant Solutions</h6>
+                                <h6 class="font-weight-medium">Great Places to Live</h6>
                                 <p>You can relay on our amazing features list and also our customer services will.</p>
                             </div>
                             <div class="col-md-6 mt-3">
@@ -399,15 +398,15 @@
                                 <p>You can relay on our amazing features list and also our customer services will.</p>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <h6 class="font-weight-medium">Fruitful Results</h6>
+                                <h6 class="font-weight-medium">Sustainable Living</h6>
                                 <p>You can relay on our amazing features list and also our customer services will.</p>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <h6 class="font-weight-medium">100% Satisfection</h6>
+                                <h6 class="font-weight-medium">Community Involvement</h6>
                                 <p>You can relay on our amazing features list and also our customer services will.</p>
                             </div>
                             <div class="col-lg-12 my-4 d-none d-md-block d-lg-block d-xl-block">
-                                <a class="btn btn-info-gradiant btn-md border-0 text-white" href="#f12"><span>Learn More</span></a>
+                                <a class="btn btn-info-gradiant btn-md border-0 text-white" href="#f12"><span>Project</span></a>
                             </div>
                         </div>
                     </div>
@@ -434,54 +433,6 @@
             </div>
         </section>
 
-        <section class="section--known-more">
-            <div class="container">
-                <div class="row wrap--known-more">
-                    <div class="col-md-5 align-self-center">
-                        <div class="max-box">
-                            <span class="badge badge-info rounded-pill px-3 py-1 font-weight-light">Place</span>
-                            <h3 class="mt-3">Places built to connect</h3>
-                            <p class="mt-3">We shape places that move people. Places that inspire. Places that enrich cities – where people can live, work, learn and play.</p>
-                            <a href="javascript:void(0)" class="linking">Learn More<span class="ml-3">
-                                    <svg width="26" height="17" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M25.841 8.124L17.716.156a.549.549 0 00-.766 0 .524.524 0 000 .75l7.2 7.063H.543c-.3 0-.542.237-.542.531 0 .294.242.531.542.531H24.15l-7.2 7.062a.524.524 0 000 .751.545.545 0 00.765 0l8.125-7.968a.524.524 0 000-.752z" fill="currentColor" fill-rule="nonzero"></path>
-                                    </svg></span></a>
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-md-7">
-
-                        <figure class="figure">
-                            <img src="img/places1.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            <figcaption class="figure-caption mt-3">
-                                <h4>Richmond-Adelaide Centre</h4>
-                                <p>Toronto, Canada</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-                </div>
-                <div class="row wrap-service-26 mt-4 pt-3">
-                    <div class="col-md-7">
-                        <figure class="figure">
-                            <img src="img/places2.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            <figcaption class="figure-caption mt-3">
-                                <h4>Australian Office Portfolio Take-Private</h4>
-                                <p>Sydney and Melbourne, Australia</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-5 align-self-center">
-                        <span class="badge badge-info rounded-pill px-3 py-1 font-weight-light">Places</span>
-                        <h3 class="mt-3">Investing for the future</h3>
-                        <p class="mt-3">We invest in high-quality properties, portfolios, development sites and platforms in global gateway cities and high-growth hubs. Private to public, low-risk to high-reward – our conviction means we invest for the long run.</p>
-                        <a class="linking" href="javascript:void(0)">Learn More <span class="ml-3">
-                                <svg width="26" height="17" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M25.841 8.124L17.716.156a.549.549 0 00-.766 0 .524.524 0 000 .75l7.2 7.063H.543c-.3 0-.542.237-.542.531 0 .294.242.531.542.531H24.15l-7.2 7.062a.524.524 0 000 .751.545.545 0 00.765 0l8.125-7.968a.524.524 0 000-.752z" fill="currentColor" fill-rule="nonzero"></path>
-                                </svg></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
 
 
         <section class="section--feature-properties">
@@ -492,7 +443,7 @@
                     </div>
                     <div class="col-12 col-md-6 my-32 text-md-right">
 
-                        <a href="/corp/lease" class="link--arrow bold" target="">
+                        <a href="#" class="link--arrow bold">
                             <span>
                                 Lease with us
                             </span>
@@ -796,8 +747,7 @@
     </footer>
 
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="assets/font-awesome/fontawesome.min.js"></script>
     <script src="assets/font-awesome/brands.min.js"></script>
     <script src="assets/font-awesome/solid.min.js"></script>
