--- a/project-details.html
+++ b/project-details.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="assets/font-awesome/solid.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="css/nice-select.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 
@@ -52,8 +52,8 @@
                     <div class="mainmenu">
                         <a href="index.html" class="mainmenu__item">Home</a>
                         <a href="#" class="mainmenu__item">Story</a>
-                        <a href="#" class="mainmenu__item">project</a>
-                        <a href="#" class="mainmenu__item">news &amp; events</a>
+                        <a href="./project-filter.html" class="mainmenu__item">Properties</a>
+                        <a href="./news-and-event.html" class="mainmenu__item">news &amp; events</a>
                         <a href="#" class="mainmenu__item">Contact</a>
                     </div>
                     <p class="label label--topleft label--vert-mirror">the important stuff</p>
@@ -138,6 +138,7 @@
                                 <div class="col-md-4 col-sm-6 col-xs-12">
                                     <div class="bolck-gallery animated bounceInLeft">
                                         <img src="img/block1.jpg" alt="">
+                                        
 
                                     </div>
                                 </div>
@@ -543,8 +544,7 @@
 
 
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="assets/font-awesome/fontawesome.min.js"></script>
     <script src="assets/font-awesome/brands.min.js"></script>
     <script src="assets/font-awesome/solid.min.js"></script>
