--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="menu__item-inner">
                     <div class="mainmenu">
                         <a href="index.html" class="mainmenu__item">Home</a>
-                        <a href="#" class="mainmenu__item">Story</a>
+                        <a href="./about.html" class="mainmenu__item">About</a>
                         <a href="./project-filter.html" class="mainmenu__item">Properties</a>
                         <a href="./news-and-event.html" class="mainmenu__item">news &amp; events</a>
                         <a href="#" class="mainmenu__item">Contact</a>
@@ -480,7 +480,7 @@
 
                                             </div>
 
-                                            <a class="btn btn-dark feature-btn" href="project-filter.html">VIEW AVAVILITY</a>
+                                            <a class="btn btn-dark feature-btn" href="project-filter.html">Properties</a>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -502,7 +502,7 @@
 
                                             </div>
 
-                                            <a class="btn btn-dark feature-btn" href="#/">VIEW AVAVILITY</a>
+                                            <a class="btn btn-dark feature-btn" href="#/">Propeties</a>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -524,7 +524,7 @@
 
                                             </div>
 
-                                            <a class="btn btn-dark feature-btn" href="#/">VIEW AVAVILITY</a>
+                                            <a class="btn btn-dark feature-btn" href="#/">Properties</a>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -546,7 +546,7 @@
 
                                             </div>
 
-                                            <a class="btn btn-dark feature-btn" href="#/">VIEW AVAVILITY</a>
+                                            <a class="btn btn-dark feature-btn" href="#/">Properties</a>
                                         </div>
                                     </div>
                                     <div class="col-6">
@@ -568,7 +568,7 @@
 
                                             </div>
 
-                                            <a class="btn btn-dark feature-btn" href="#/">VIEW AVAVILITY</a>
+                                            <a class="btn btn-dark feature-btn" href="#/">Properties</a>
                                         </div>
                                     </div>
                                     <div class="col-6">
