--- a/project-details.html
+++ b/project-details.html
@@ -51,7 +51,7 @@
                 <div class="menu__item-inner">
                     <div class="mainmenu">
                         <a href="index.html" class="mainmenu__item">Home</a>
-                        <a href="#" class="mainmenu__item">Story</a>
+                        <a href="./about.html" class="mainmenu__item">About</a>
                         <a href="./project-filter.html" class="mainmenu__item">Properties</a>
                         <a href="./news-and-event.html" class="mainmenu__item">news &amp; events</a>
                         <a href="#" class="mainmenu__item">Contact</a>
