--- a/about.html
+++ b/about.html
@@ -26,11 +26,13 @@
     <svg class="hidden">
         <symbol id="icon-menu" viewBox="0 0 119 25">
             <title>menu</title>
-            <path d="M36,8 L36,0 L100,0 L100,8 L36,8 Z M0,8 L0,0 L24,0 L24,8 L0,8 Z M0,28 L0,20 L71,20 L71,28 L0,28 Z" />
+            <path
+                d="M36,8 L36,0 L100,0 L100,8 L36,8 Z M0,8 L0,0 L24,0 L24,8 L0,8 Z M0,28 L0,20 L71,20 L71,28 L0,28 Z" />
         </symbol>
         <symbol id="icon-close" viewBox="0 0 24 24">
             <title>close</title>
-            <path d="M24 1.485L22.515 0 12 10.515 1.485 0 0 1.485 10.515 12 0 22.515 1.485 24 12 13.484 22.515 24 24 22.515 13.484 12z" />
+            <path
+                d="M24 1.485L22.515 0 12 10.515 1.485 0 0 1.485 10.515 12 0 22.515 1.485 24 12 13.484 22.515 24 24 22.515 13.484 12z" />
         </symbol>
     </svg>
     <main>
@@ -43,7 +45,7 @@
         </div>
         <div class="content">
             <div class="menu-wrapper project-details--banner">
-                <h1>FANAM<br>NEWS and EVENTS</h1>
+                <h1>WORLDWIDE LEADER IN REAL ESTATE SERVICES</h1>
             </div>
         </div>
         <nav class="menu">
@@ -51,7 +53,7 @@
                 <div class="menu__item-inner">
                     <div class="mainmenu">
                         <a href="index.html" class="mainmenu__item">Home</a>
-                        <a href="./about.html" class="mainmenu__item">About</a>>
+                        <a href="./about.html" class="mainmenu__item">About</a>
                         <a href="./project-filter.html" class="mainmenu__item">Properties</a>
                         <a href="./news-and-event.html" class="mainmenu__item">news &amp; events</a>
                         <a href="#" class="mainmenu__item">Contact</a>
@@ -69,8 +71,10 @@
             <div class="menu__item menu__item--3" data-direction="bt">
                 <div class="menu__item-inner">
                     <div class="sidemenu">
-                        <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">mission and vision</span></a>
-                        <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">board of director</span></a>
+                        <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">mission and
+                                vision</span></a>
+                        <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">board of
+                                director</span></a>
                         <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">management</span></a>
                         <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">companies</span></a>
                         <a href="#" class="sidemenu__item"><span class="sidemenu__item-inner">our client</span></a>
@@ -99,51 +103,43 @@
         </nav>
     </main>
     <content class="project-details">
-        <section class="section--known-more">
+        <section class="about-company-section">
             <div class="container">
-                <div class="row wrap--known-more">
-                    <div class="col-md-5 align-self-center">
-                        <div class="max-box">
-                            <span class="badge badge-info rounded-pill px-3 py-1 font-weight-light">Place</span>
-                            <h3 class="mt-3">Places built to connect</h3>
-                            <p class="mt-3">We shape places that move people. Places that inspire. Places that enrich cities – where people can live, work, learn and play.</p>
-                            <a href="javascript:void(0)" class="linking">Learn More<span class="ml-3">
-                                    <svg width="26" height="17" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M25.841 8.124L17.716.156a.549.549 0 00-.766 0 .524.524 0 000 .75l7.2 7.063H.543c-.3 0-.542.237-.542.531 0 .294.242.531.542.531H24.15l-7.2 7.062a.524.524 0 000 .751.545.545 0 00.765 0l8.125-7.968a.524.524 0 000-.752z" fill="currentColor" fill-rule="nonzero"></path>
-                                    </svg></span></a>
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-md-7">
+                <h1>ABOUT FANAM</h1>
+                <p>FANAM more than 100,000 professionals provide exceptional outcomes for clients in
+                    100+ countries by combining local market insight, broad services, specialized
+                    expertise and premier tools and resources.</p>
+                <p>we believe in the power of clarity. That a simple strategy, unwavering focus and deliberate actions
+                    enable consistent execution on our vision for long-term growth. As an innovative company at the
+                    forefront of providing premium real estate to the dynamic healthcare industry, we are committed to
+                    delivering value to our shareholders, customers and employees.</p>
 
-                        <figure class="figure">
-                            <img src="img/places1.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            <figcaption class="figure-caption mt-3">
-                                <h4>Richmond-Adelaide Centre</h4>
-                                <p>Toronto, Canada</p>
-                            </figcaption>
-                        </figure>
-                    </div>
+                <div class="mb-5">
+                    <a href="/docs/5.0/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
                 </div>
-                <div class="row wrap-service-26 mt-4 pt-3">
-                    <div class="col-md-7">
-                        <figure class="figure">
-                            <img src="img/places2.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            <figcaption class="figure-caption mt-3">
-                                <h4>Australian Office Portfolio Take-Private</h4>
-                                <p>Sydney and Melbourne, Australia</p>
-                            </figcaption>
-                        </figure>
+
+                <div class="row g-5">
+                    <div class="col-md-6">
+                        <h2>Starter</h2>
+                        <p>We are always looking for exceptional candidates who want to be part of our dynamic,
+                            fast-paced organization.</p>
+                        <ul class="icon-list">
+                            <li><a href="#" rel="noopener" target="_blank">Mission and Vision</a></li>
+                            <li><a href="#" rel="noopener" target="_blank">Board of Director</a></li>
+                        </ul>
                     </div>
-                    <div class="col-md-5 align-self-center">
-                        <span class="badge badge-info rounded-pill px-3 py-1 font-weight-light">Places</span>
-                        <h3 class="mt-3">Investing for the future</h3>
-                        <p class="mt-3">We invest in high-quality properties, portfolios, development sites and platforms in global gateway cities and high-growth hubs. Private to public, low-risk to high-reward – our conviction means we invest for the long run.</p>
-                        <a class="linking" href="javascript:void(0)">Learn More <span class="ml-3">
-                                <svg width="26" height="17" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M25.841 8.124L17.716.156a.549.549 0 00-.766 0 .524.524 0 000 .75l7.2 7.063H.543c-.3 0-.542.237-.542.531 0 .294.242.531.542.531H24.15l-7.2 7.062a.524.524 0 000 .751.545.545 0 00.765 0l8.125-7.968a.524.524 0 000-.752z" fill="currentColor" fill-rule="nonzero"></path>
-                                </svg></span>
-                        </a>
+
+                    <div class="col-md-6">
+                        <h2>Guides</h2>
+                        <p>We are committed to responsible and sustainable business practices.</p>
+                        <ul class="icon-list">
+                            <li><a href="#">Corporate Responsibility</a></li>
+                            <li><a href="#">Executive Leadership</a></li>
+                            <li><a href="#">Investor Relations</a></li>
+                            <li><a href="#">Corporate Information</a></li>
+                        </ul>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -162,7 +158,8 @@
                     <div class="col-md-4 col-sm-6">
                         <form class="newsletter">
                             <input type="text" placeholder="Email Address">
-                            <button class="newsletter_submit_btn" type="submit"><i class="fa fa-paper-plane"></i></button>
+                            <button class="newsletter_submit_btn" type="submit"><i
+                                    class="fa fa-paper-plane"></i></button>
                         </form>
 
                     </div>
@@ -201,7 +198,8 @@
 
                             <div class="footer-logo"><img src="img/logo2.png" alt="logo">
                             </div>
-                            <p>Your one-stop career platform to find Jobs, Internships, Professional Trainings, Projects, and Volunteering Opportunities.</p>
+                            <p>Your one-stop career platform to find Jobs, Internships, Professional Trainings,
+                                Projects, and Volunteering Opportunities.</p>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <h3>Quick LInks</h3>
@@ -249,7 +247,6 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
